--- a/Homepage.html
+++ b/Homepage.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&family=League+Spartan:wght@100..900&family=Poppins:wght@100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&family=League+Spartan:wght@100..900&family=Poppins:wght@100..900&display=swap"
+        rel="stylesheet">
     <title>Homepage</title>
 </head>
+
 <body class="bg-gray-100 shadow-blue-950 shadow-lg">
     <nav class="bg-blue-600 text-white shadow-md">
-        <div class="container mx-auto flex justify-between  items-center py-5 px-10">
+        <div class="container mx-auto flex justify-between items-center py-5 px-10">
             <div class="text-xl font-bold">
                 <a href="#" class="hover:text-gray-200">E Health Care System</a>
             </div>
@@ -28,16 +32,89 @@
         </div>
     </nav>
 
-    <!-- Body Section with Darkened Background Image -->
-    <div class="relative w-full h-screen bg-cover bg-center" style="background-image: url('emergency-call-ambulance-flat-vector-illustration-mobile-app-hospital-talk-center-web-banner-poster-medical-call-center-emergency-car_735449-494.avif');">
-     
-        <div class="absolute inset-0 bg-black bg-opacity-70"></div>
+    <div class="relative w-full h-screen bg-cover bg-center"
+        style="background-image: url('emergency-call-ambulance-flat-vector-illustration-mobile-app-hospital-talk-center-web-banner-poster-medical-call-center-emergency-car_735449-494.avif');">
+        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
 
         <div class="absolute inset-0 flex justify-center items-center">
-            <h1 class="text-white font-my text-6xl font-bold drop-shadow-lg shadow-black text-center">
+            <h1
+                class="-translate-y-40 text-8xl bg-gradient-to-r from-cyan-400 to-blue-600 inline-block text-transparent bg-clip-text">
                 Welcome to E Health Care System
             </h1>
         </div>
     </div>
+
+    <main class="space-y-0">
+
+
+        <section class="h-screen flex items-center justify-center bg-slate-800 relative overflow-hidden">
+            <div
+                class="absolute top-0 bottom-0 left-1/2 transform -translate-x-1/2 w-1 bg-gradient-to-b from-cyan-400 to-blue-600 opacity-50 z-0">
+            </div>
+            <div class="flex flex-col items-center justify-center w-full relative z-10">
+                <img src="vaccine-vector-illustration-cartoon_969863-127260.jpg" alt="Vaccine check"
+                    class="w-60 h-60 rounded-full object-cover border-2 p-4 mx-auto -translate-y-40">
+                <div
+                    class="w-20 h-20 rounded-full bg-white shadow-lg text-center flex items-center justify-center mb-11">
+                    <h1 class="text-3xl text-slate-800 font-sans font-bold">1</h1>
+                </div>
+                <button
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-cyan-500 to-blue-500 group-hover:from-cyan-500 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-cyan-200 dark:focus:ring-cyan-800">
+                    <span
+                        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0 text-2xl">
+                        Check for Vaccine availability
+                    </span>
+                </button>
+            </div>
+        </section>
+
+
+        <section class="h-screen flex items-center justify-center bg-slate-700 relative overflow-hidden">
+
+            <div
+                class="absolute top-0 bottom-0 left-1/2 transform -translate-x-1/2 w-1 bg-gradient-to-b from-cyan-400 to-blue-600 opacity-50 z-0">
+            </div>
+            <div class="flex flex-col items-center justify-center w-full relative z-10">
+                <img src="cute-cartoon-blood-drop-having-blood-transfusion-vector.jpg" alt="Vaccine check"
+                    class="w-60 h-60 rounded-full object-cover border-2 p-4 mx-auto -translate-y-40">
+                <div
+                    class="w-20 h-20 rounded-full bg-white shadow-lg text-center flex items-center justify-center mb-11">
+                    <h1 class="text-3xl text-slate-800 font-sans font-bold">2</h1>
+                </div>
+                <button
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-cyan-500 to-blue-500 group-hover:from-cyan-500 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-cyan-200 dark:focus:ring-cyan-800">
+                    <span
+                        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0 text-2xl">
+                        Free Blood request
+                    </span>
+                </button>
+            </div>
+        </section>
+
+
+        <section class="h-screen flex items-center justify-center bg-slate-600 relative overflow-hidden">
+
+            <div
+                class="absolute top-0 bottom-0 left-1/2 transform -translate-x-1/2 w-1 bg-gradient-to-b from-cyan-400 to-blue-600 opacity-50 z-0">
+            </div>
+            <div class="flex flex-col items-center justify-center w-full relative z-10">
+                <img src="vaccine-vector-illustration-cartoon_969863-127260.jpg" alt="Vaccine check"
+                    class="w-60 h-60 rounded-full object-cover border-2 p-4 mx-auto -translate-y-40">
+                <div
+                    class="w-20 h-20 rounded-full bg-white shadow-lg text-center flex items-center justify-center mb-11">
+                    <h1 class="text-3xl text-slate-800 font-sans font-bold">3</h1>
+                </div>
+                <button
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-cyan-500 to-blue-500 group-hover:from-cyan-500 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-cyan-200 dark:focus:ring-cyan-800">
+                    <span
+                        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0 text-2xl">
+                        Check for Vaccine availability
+                    </span>
+                </button>
+            </div>
+        </section>
+
+    </main>
 </body>
+
 </html>
