--- a/Homepage.html
+++ b/Homepage.html
@@ -1,43 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&family=League+Spartan:wght@100..900&family=Poppins:wght@100..900&display=swap" rel="stylesheet">
     <title>Homepage</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&display=swap');
+
+        @keyframes typewriter {
+            0% {
+                width: 0;
+            }
+
+            100% {
+                width: 100%;
+            }
+        }
+
+        @keyframes blinkTextCursor {
+            50% {
+                border-color: transparent;
+            }
+
+            100% {
+                border-color: black;
+            }
+        }
+
+        .fixed-slogan {
+            white-space: nowrap;
+            overflow: hidden;
+            display: inline-block;
+            animation: typewriter 4s steps(40) 2s forwards, blinkTextCursor 0.75s step-end infinite;
+        }
+
+        .fixed-heading {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            font-size: 3rem;
+            font-weight: bolder;
+            text-align: center;
+            font-family: "League Spartan";
+        }
+
+        .fixed-slogan {
+            top: 30%;
+            left: 50%;
+            transform: translateX(-50%) translateY(250px);
+            font-size: 1.5rem;
+            text-align: center;
+            font-weight: lighter;
+            font-family: "Baloo Bhai 2";
+        }
+    </style>
 </head>
-<body class="bg-gray-100 shadow-blue-950 shadow-lg">
-    <nav class="bg-blue-600 text-white shadow-md">
-        <div class="container mx-auto flex justify-between  items-center py-5 px-10">
-            <div class="text-xl font-bold">
-                <a href="#" class="hover:text-gray-200">E Health Care System</a>
-            </div>
 
-            <div class="space-x-9">
-                <a href="#" class="hover:text-gray-200">Home</a>
-                <a href="#" class="hover:text-gray-200">About</a>
-                <a href="#" class="hover:text-gray-200">Services</a>
-                <a href="#" class="hover:text-gray-200">Contact</a>
+<body
+    class="relative bg-cover bg-center bg-no-repeat bg-fixed h-screen bg-[url('a-medical-emergency-ambulance-driving-during-traffic-jam-on-city-road-rush-hour-concept-ambulance-generative-ai-photo.jpeg')]">
+    <div class="fixed inset-0 bg-gradient-to-b from-black via-gray-900 to-black opacity-70"></div>
+    <nav class="text-white z-30 relative">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <span class="self-center text-2xl font-semibold whitespace-nowrap">E Health Care</span>
+            </a>
+            <div class="hidden w-full md:block md:w-auto">
+                <ul class="flex flex-col font-medium p-4 mt-4 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0">
+                    <li>
+                        <a href="#home"
+                            class="block py-2 px-3 rounded-lg transition-colors duration-300 hover:bg-gradient-to-r hover:from-cyan-500 hover:to-blue-500 hover:text-white">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#services"
+                            class="block py-2 px-3 rounded-lg transition-colors duration-300 hover:bg-gradient-to-r hover:from-cyan-500 hover:to-blue-500 hover:text-white">
+                            Services
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#pricing"
+                            class="block py-2 px-3 rounded-lg transition-colors duration-300 hover:bg-gradient-to-r hover:from-cyan-500 hover:to-blue-500 hover:text-white">
+                            Pricing
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#contact"
+                            class="block py-2 px-3 rounded-lg transition-colors duration-300 hover:bg-gradient-to-r hover:from-cyan-500 hover:to-blue-500 hover:text-white">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
             </div>
+            <div class="flex items-center justify-center h-full relative z-20">
 
-            <div class="space-x-4">
-                <a href="#" class="px-4 py-2 bg-white text-blue-600 rounded-md hover:bg-gray-200">Login</a>
-                <a href="#" class="px-4 py-2 bg-blue-500 rounded-md hover:bg-blue-700">Signup</a>
+
+                <div class="flex space-x-4">
+                    <a href="#_"
+                        class="rounded-md px-3.5 py-2 m-1 overflow-hidden relative group cursor-pointer border-2 font-medium border-cyan-600 text-cyan-600 text-white">
+                        <span
+                            class="absolute w-64 h-0 transition-all duration-300 origin-center rotate-45 -translate-x-20 bg-cyan-600 top-1/2 group-hover:h-64 group-hover:-translate-y-32 ease"></span>
+                        <span
+                            class="relative text-cyan-600 transition duration-300 group-hover:text-white ease">Login</span>
+                    </a>
+                    <a href="#_"
+                        class="relative inline-flex items-center justify-start inline-block px-5 py-3 overflow-hidden font-bold rounded-full group">
+                        <span
+                            class="w-32 h-32 rotate-45 translate-x-12 -translate-y-2 absolute left-0 top-0 bg-white opacity-[3%]"></span>
+                        <span
+                            class="absolute top-0 left-0 w-48 h-48 -mt-1 transition-all duration-500 ease-in-out rotate-45 -translate-x-56 -translate-y-24 bg-white opacity-100 group-hover:-translate-x-8"></span>
+                        <span
+                            class="relative w-full text-left text-white transition-colors duration-200 ease-in-out group-hover:text-gray-900">Sign
+                            UP! </span>
+                        <span class="absolute inset-0 border-2 border-white rounded-full"></span>
+                    </a>
+                </div>
             </div>
-        </div>
     </nav>
-
-    <!-- Body Section with Darkened Background Image -->
-    <div class="relative w-full h-screen bg-cover bg-center" style="background-image: url('emergency-call-ambulance-flat-vector-illustration-mobile-app-hospital-talk-center-web-banner-poster-medical-call-center-emergency-car_735449-494.avif');">
-     
-        <div class="absolute inset-0 bg-black bg-opacity-70"></div>
-
-        <div class="absolute inset-0 flex justify-center items-center">
-            <h1 class="text-white font-my text-6xl font-bold drop-shadow-lg shadow-black text-center">
+    <!-- Welcome Text Container -->
+    <div class="container mx-auto py-96 relative"> <!-- Added padding for spacing -->
+        <div class="fixed-heading flex flex-col items-center justify-center h-full absolute inset-0">
+            <h1 class="text-transparent text-7xl bg-clip-text bg-gradient-to-r from-blue-300 via-teal-200 to-pink-300">
                 Welcome to E Health Care System
             </h1>
+
+            <h2
+                class="fixed-slogan text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-yellow-200 absolute ">
+                Making Health Care Simpler, Smarter, and More Accessible for All.
+            </h2>
+
+        </div>
+    </div>
+
+
+    <!-- Grid Section Container -->
+    <div class="relative container mx-auto py-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- Card 1 -->
+            <div class="relative flex items-center justify-center">
+                <div
+                    class="relative w-full rounded-3xl p-px bg-gradient-to-b from-blue-300 to-pink-300 dark:from-blue-800 dark:to-purple-800 shadow-xl">
+                    <div
+                        class="relative rounded-[calc(1.5rem-1px)] p-6 sm:p-8 md:p-10 bg-white dark:bg-gray-900 transform hover:scale-105 transition-transform duration-300">
+                        <div class="flex justify-center items-center">
+                            <button
+                                class="flex justify-center items-center p-1 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
+                                <span
+                                    class="text-lg sm:text-xl relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">Check
+                                    Now!</span>
+                            </button>
+                        </div>
+                        <div class="relative mt-6 sm:mt-8 flex gap-4 items-center justify-center">
+                            <img class="h-32 w-32 sm:h-40 sm:w-40 rounded-full shadow-lg"
+                                src="cute-cartoon-blood-drop-having-blood-transfusion-vector.jpg" alt="Blood drop" />
+                            <div>
+                                <h3
+                                    class="font-sans text-xl sm:text-2xl lg:text-3xl font-medium text-gray-700 dark:text-white">
+                                    Free Blood Request</h3>
+                                <span
+                                    class="translate-y-3 text-lg sm:text-xl tracking-wide text-gray-600 dark:text-gray-400">E
+                                    Health Care</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="relative flex items-center justify-center">
+                <div
+                    class="relative w-full rounded-3xl p-px bg-gradient-to-b from-blue-300 to-pink-300 dark:from-blue-800 dark:to-purple-800 shadow-xl">
+                    <div
+                        class="relative rounded-[calc(1.5rem-1px)] p-6 sm:p-8 md:p-10 bg-white dark:bg-gray-900 transform hover:scale-105 transition-transform duration-300">
+                        <div class="flex justify-center items-center">
+                            <button
+                                class="flex justify-center items-center p-1 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
+                                <span
+                                    class="text-lg sm:text-xl relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">Check
+                                    Now!</span>
+                            </button>
+                        </div>
+                        <div class="relative mt-6 sm:mt-8 flex gap-4 items-center justify-center">
+                            <img class="h-32 w-32 sm:h-40 sm:w-40 rounded-full shadow-lg"
+                                src="cute-cartoon-blood-drop-having-blood-transfusion-vector.jpg" alt="Blood drop" />
+                            <div>
+                                <h3
+                                    class="font-sans text-xl sm:text-2xl lg:text-3xl font-medium text-gray-700 dark:text-white">
+                                    Free Blood Request</h3>
+                                <span
+                                    class="translate-y-3 text-lg sm:text-xl tracking-wide text-gray-600 dark:text-gray-400">E
+                                    Health Care</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="relative flex items-center justify-center">
+                <div
+                    class="relative w-full rounded-3xl p-px bg-gradient-to-b from-blue-300 to-pink-300 dark:from-blue-800 dark:to-purple-800 shadow-xl">
+                    <div
+                        class="relative rounded-[calc(1.5rem-1px)] p-6 sm:p-8 md:p-10 bg-white dark:bg-gray-900 transform hover:scale-105 transition-transform duration-300">
+                        <div class="flex justify-center items-center">
+                            <button
+                                class="flex justify-center items-center p-1 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
+                                <span
+                                    class="text-lg sm:text-xl relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">Check
+                                    Now!</span>
+                            </button>
+                        </div>
+                        <div class="relative mt-6 sm:mt-8 flex gap-4 items-center justify-center">
+                            <img class="h-32 w-32 sm:h-40 sm:w-40 rounded-full shadow-lg"
+                                src="cute-cartoon-blood-drop-having-blood-transfusion-vector.jpg" alt="Blood drop" />
+                            <div>
+                                <h3
+                                    class="font-sans text-xl sm:text-2xl lg:text-3xl font-medium text-gray-700 dark:text-white">
+                                    Free Blood Request</h3>
+                                <span
+                                    class="translate-y-3 text-lg sm:text-xl tracking-wide text-gray-600 dark:text-gray-400">E
+                                    Health Care</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mx-auto grid  md:grid-cols-3 gap-10 px-4 py-8 m-8 relative">
+        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-6 text-white shadow-md">
+            <h3 class="text-2xl font-semibold mb-4">About Us</h3>
+            <p class="text-base">
+                At E Health Care, we aim to bridge the gap between healthcare providers and patients by utilizing
+                innovative technologies and efficient service systems.
+            </p>
+        </div>
+
+        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-6 text-white shadow-md">
+            <h3 class="text-2xl font-semibold mb-4">Our Services</h3>
+            <p class="text-base">
+                From emergency medical support to regular health checkups, we provide a wide array of healthcare
+                solutions tailored to your needs.
+            </p>
+        </div>
+
+        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-6 text-white shadow-md">
+            <h3 class="text-2xl font-semibold mb-4">Contact Us</h3>
+            <p class="text-base">
+                Have questions or need assistance? Reach out to us via our hotline or email for immediate support.
+            </p>
         </div>
     </div>
 </body>
+
 </html>
