--- a/Homepage.html
+++ b/Homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>E Health Care Homepage</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
@@ -98,14 +98,14 @@
 
 
                 <div class="flex space-x-4">
-                    <a href="#_"
+                    <a href="http://127.0.0.1:3000/Login_AS.html"
                         class="rounded-md px-3.5 py-2 m-1 overflow-hidden relative group cursor-pointer border-2 font-medium border-cyan-600 text-cyan-600 text-white">
                         <span
                             class="absolute w-64 h-0 transition-all duration-300 origin-center rotate-45 -translate-x-20 bg-cyan-600 top-1/2 group-hover:h-64 group-hover:-translate-y-32 ease"></span>
                         <span
                             class="relative text-cyan-600 transition duration-300 group-hover:text-white ease">Login</span>
                     </a>
-                    <a href="#_"
+                    <a href="http://127.0.0.1:3000/SignUP_as.html"
                         class="relative inline-flex items-center justify-start inline-block px-5 py-3 overflow-hidden font-bold rounded-full group">
                         <span
                             class="w-32 h-32 rotate-45 translate-x-12 -translate-y-2 absolute left-0 top-0 bg-white opacity-[3%]"></span>
@@ -127,7 +127,7 @@
             </h1>
 
             <h2
-                class="h-screen pt-40 fixed-slogan text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-yellow-200 absolute ">
+                class="h-screen pt-20 fixed-slogan text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-yellow-200 absolute ">
                 Making Health Care Simpler, Smarter, and More Accessible for All.
             </h2>
 
