--- a/User_login.html
+++ b/User_login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E Health Care - User</title>
+    <title>E Health Care - User Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
@@ -45,10 +45,10 @@
   </head>
 
   <body
-    class="bg-cover bg-center bg-no-repeat bg-fixed bg-[url('a-medical-emergency-ambulance-driving-during-traffic-jam-on-city-road-rush-hour-concept-ambulance-generative-ai-photo.jpeg')]"
+    class="relative bg-cover bg-center bg-no-repeat bg-fixed bg-[url('a-medical-emergency-ambulance-driving-during-traffic-jam-on-city-road-rush-hour-concept-ambulance-generative-ai-photo.jpeg')]"
   >
     <div
-      class="fixed inset-0 bg-gradient-to-b from-black via-gray-900 to-black opacity-90"
+      class="absolute inset-0 bg-gradient-to-b from-black via-gray-900 to-black opacity-90"
     ></div>
     <nav class="text-white z-30 relative home-text text-xl">
       <div
@@ -65,7 +65,7 @@
           >
             <li>
               <a
-                href="#home"
+                href="http://127.0.0.1:3000/Homepage.html"
                 class="block py-2 px-3 rounded-lg transition-colors duration-300 hover:bg-gradient-to-r hover:from-cyan-500 hover:to-blue-500 hover:text-white"
                 >Home</a
               >
