--- a/Login_AS.html
+++ b/Login_AS.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E Health Care - Admin Login</title>
+    <title>E Health Care - Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
@@ -45,24 +45,20 @@
   </head>
 
   <body
-    class="bg-cover bg-center bg-no-repeat bg-fixed bg-[url('a-medical-emergency-ambulance-driving-during-traffic-jam-on-city-road-rush-hour-concept-ambulance-generative-ai-photo.jpeg')]"
+    class="relative bg-cover bg-center bg-no-repeat bg-fixed bg-[url('a-medical-emergency-ambulance-driving-during-traffic-jam-on-city-road-rush-hour-concept-ambulance-generative-ai-photo.jpeg')]"
   >
     <div
-      class="fixed inset-0 bg-gradient-to-b from-black via-gray-900 to-black opacity-90"
+      class="absolute inset-0 bg-gradient-to-b from-black via-gray-900 to-black opacity-90"
     ></div>
     <nav class="text-white z-30 relative home-text text-xl">
-      <div
-        class="max-w-screen-xl flex items-center justify-between mx-auto p-4"
-      >
+      <div class="max-w-screen-xl flex items-center justify-between mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <span class="login_text text-2xl font-semibold whitespace-nowrap"
-            >E Health Care</span
-          >
+          <span class="login_text text-2xl font-semibold whitespace-nowrap">
+            E Health Care
+          </span>
         </a>
         <div class="flex mx-auto w-full md:block md:w-auto">
-          <ul
-            class="flex flex-auto flex-row font-medium p-4 mt-4 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0"
-          >
+          <ul class="flex flex-auto flex-row font-medium p-4 mt-4 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0">
             <li>
               <a
                 href="http://127.0.0.1:3000/Homepage.html"
@@ -103,136 +99,41 @@
             <h2
               class="login-text text-6xl font-bold lg:leading-[55px] text-white"
             >
-              Welcome to Admin Panel
+              Choose Your Login Option
             </h2>
             <p
               class="fixed-slogan text-transparent bg-clip-text login-text text-xl mt-6 text-white"
             >
               Enjoy effortless journey of your healthcare.
             </p>
-            <p class="text-sm mt-12 text-white">
-              Don't have an account?
-              <a href="#" class="text-white font-semibold hover:underline ml-1"
-                >Register here</a
-              >
-            </p>
           </div>
 
-          <form class="max-w-md md:ml-auto w-full">
-            <h3
-              class="text-white text-4xl login-text font-bold mb-8 flex justify-center"
+          <!-- Login Option Buttons (User or Admin) -->
+          <div class="flex justify-center items-center space-x-6 mt-8">
+            <a
+              href="http://127.0.0.1:3000/User_login.html"
+              class="bg-gradient-to-r from-green-400 to-blue-500 text-white font-semibold py-3 px-10 rounded-md shadow-lg hover:shadow-xl hover:bg-gradient-to-l"
             >
-              Admin - Sign in
-            </h3>
+              Login as User
+            </a>
+            <a
+              href="http://127.0.0.1:3000/Admin_login.html"
+              class="bg-gradient-to-r from-red-400 to-yellow-500 text-white font-semibold py-3 px-10 rounded-md shadow-lg hover:shadow-xl hover:bg-gradient-to-l"
+            >
+              Login as Admin
+            </a>
+          </div>
 
-            <div class="space-y-4">
-              <div>
-                <input
-                  name="email"
-                  type="email"
-                  autocomplete="email"
-                  required
-                  class="bg-gray-100 w-full text-md text-white px-4 py-3.5 rounded-md outline-blue-600 focus:bg-transparent"
-                  placeholder="Email address"
-                />
-              </div>
-              <div>
-                <input
-                  name="password"
-                  type="password"
-                  autocomplete="current-password"
-                  required
-                  class="bg-gray-100 w-full text-md text-white px-4 py-3.5 rounded-md outline-blue-600 focus:bg-transparent"
-                  placeholder="Password"
-                />
-              </div>
-              <div class="flex flex-wrap items-center justify-between gap-4">
-                <div class="flex items-center">
-                  <input
-                    id="remember-me"
-                    name="remember-me"
-                    type="checkbox"
-                    class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded"
-                  />
-                  <label
-                    for="remember-me"
-                    class="ml-3 block text-md text-white"
-                  >
-                    Remember me
-                  </label>
-                </div>
-                <div class="text-sm">
-                  <a
-                    href="javascript:void(0);"
-                    class="text-white hover:text-blue-500 font-semibold"
-                    >Forgot your password?</a
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="!mt-8">
-              <button
-                type="submit"
-                class="relative flex mx-auto p-1 overflow-hidden font-semibold text-gray-900 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800"
-              >
-                <span
-                  class="flex justify-center text-lg sm:text-xl relative px-44 py-3 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
-                  >Login</span
-                >
-              </button>
-            </div>
-
-            <div class="space-x-6 flex justify-center mt-8">
-              <button type="button" class="border-none outline-none">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="32px"
-                  viewBox="0 0 512 512"
-                >
-                  <path
-                    fill="#fbbd00"
-                    d="M120 256c0-25.367 6.989-49.13 19.131-69.477v-86.308H52.823C18.568 144.703 0 198.922 0 256s18.568 111.297 52.823 155.785h86.308v-86.308C126.989 305.13 120 281.367 120 256z"
-                  />
-                  <path
-                    fill="#0f9d58"
-                    d="m256 392-60 60 60 60c57.079 0 111.297-18.568 155.785-52.823v-86.216h-86.216C305.044 385.147 281.181 392 256 392z"
-                  />
-                  <path
-                    fill="#31aa52"
-                    d="m139.131 325.477-86.308 86.308a260.085 260.085 0 0 0 22.158 25.235C123.333 485.371 187.62 512 256 512V392c-49.624 0-93.117-26.72-116.869-66.523z"
-                  />
-                  <path
-                    fill="#3c79e6"
-                    d="M512 256a258.24 258.24 0 0 0-4.192-46.377l-2.251-12.299H256v120h121.452a135.385 135.385 0 0 1-51.884 55.638l86.216 86.216a260.085 260.085 0 0 0 25.235-22.158C485.371 388.667 512 324.38 512 256z"
-                  />
-                  <path
-                    fill="#cf2d48"
-                    d="m352.167 159.833 10.606 10.606 84.853-84.852-10.606-10.606C388.668 26.629 324.381 0 256 0l-60 60 60 60c36.326 0 70.479 14.146 96.167 39.833z"
-                  />
-                  <path
-                    fill="#eb4132"
-                    d="M256 120V0C187.62 0 123.333 26.629 74.98 74.98a259.849 259.849 0 0 0-22.158 25.235l86.308 86.308C162.883 146.72 206.376 120 256 120z"
-                  />
-                </svg>
-              </button>
-              <button type="button" class="border-none outline-none">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="32px"
-                  viewBox="0 0 512 512"
-                >
-                  <path
-                    fill="#1877f2"
-                    d="M512 256c0 127.78-93.62 233.69-216 252.89V330h59.65L367 256h-71v-48.02c0-20.25 9.92-39.98 41.72-39.98H370v-60h-63c-72.28 0-95 42.56-95 88.01v47h-63v74h63v252.89C93.62 489.69 0 383.78 0 256 0 114.62 93.62 8.31 216 0h80c122.38 0 216 114.62 216 256z"
-                  />
-                </svg>
-              </button>
-            </div>
-          </form>
+          <p class="text-sm mt-12 text-white">
+            Don't have an account?
+            <a href="#" class="text-white font-semibold hover:underline ml-1"
+              >Register here</a
+            >
+          </p>
         </div>
       </div>
     </div>
+
     <footer class="bg-white dark:bg-gray-900 relative">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
