--- a/Login_AS.html
+++ b/Login_AS.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <titleLogin Option - E Health Care</title>
+    <title>Login Option - E Health Care</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
